tests/spec/emit/snapshots/display_struct_synthesizes_to_string.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Point { x: int, y: int }
---
package main

import "fmt"

type Point struct {
	x int
	y int
}

func (p Point) String() string {
	return fmt.Sprintf("Point { x: %v, y: %v }", p.x, p.y)
}

func (p Point) toString() string {
	return p.String()
}
