tests/spec/emit/snapshots/display_to_string_delegates_to_user_stringer.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Point { x: int, y: int }
  
  impl Point {
    fn string(self) -> string {
      "p"
    }
  }
---
package main

import "fmt"

type Point struct {
	x int
	y int
}

func (p Point) GoString() string {
	return fmt.Sprintf("Point { x: %v, y: %v }", p.x, p.y)
}

func (p Point) toString() string {
	return p.String()
}

func (p Point) String() string {
	return "p"
}
