tests/spec/emit/snapshots/display_tuple_struct_to_string.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct UserId(int)
---
package main

import "fmt"

type UserId int

func (u UserId) String() string {
	return fmt.Sprintf("UserId(%v)", int(u))
}

func (u UserId) toString() string {
	return u.String()
}
