tests/spec/emit/snapshots/displayable_empty_struct_to_string.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[displayable]\nstruct Blank {}\n"
---
package main

type Blank struct{}

func (b Blank) String() string {
	return "Blank"
}

func (b Blank) to_string() string {
	return b.String()
}
