tests/spec/emit/snapshots/displayable_struct_synthesizes_to_string.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[displayable]\nstruct Point { x: int, y: int }\n"
---
package main

import "fmt"

type Point struct {
	x int
	y int
}

func (p Point) String() string {
	return fmt.Sprintf("Point { x: %v, y: %v }", p.x, p.y)
}

func (p Point) to_string() string {
	return p.String()
}
