tests/spec/emit/snapshots/displayable_to_string_delegates_to_user_stringer.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[displayable]\nstruct Point { x: int, y: int }\n\nimpl Point {\n  fn string(self) -> string {\n    \"p\"\n  }\n}\n"
---
package main

import "fmt"

type Point struct {
	x int
	y int
}

func (p Point) GoString() string {
	return fmt.Sprintf("Point { x: %v, y: %v }", p.x, p.y)
}

func (p Point) to_string() string {
	return p.String()
}

func (p Point) String() string {
	return "p"
}
