tests/spec/emit/snapshots/displayable_tuple_struct_to_string.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[displayable]\nstruct UserId(int)\n"
---
package main

import "fmt"

type UserId int

func (u UserId) String() string {
	return fmt.Sprintf("UserId(%v)", int(u))
}

func (u UserId) to_string() string {
	return u.String()
}
